Cambios informe resultados

--- a/Informe/Informe_resultados.tex
+++ b/Informe/Informe_resultados.tex
@@ -3,8 +3,9 @@
 \author{Alba Nuez Vilà}
 \date{Julio 2024}
 
+\usepackage{Sweave}
 \begin{document}
-\SweaveOpts{concordance=TRUE}
+\input{Informe_resultados-concordance}
 \maketitle
 
 \section{Parte 1: Actitud hacia los demás e inmigración}
