--- a/Informe/Informe_resultados.Rnw
+++ b/Informe/Informe_resultados.Rnw
@@ -1,14 +1,17 @@
 \documentclass{article}
-\usepackage{graphicx}  % For including images
-\usepackage{Sweave}    % For Sweave integration
+\usepackage{graphicx}
+\usepackage{Sweave}
 \usepackage{amsmath}
+\usepackage[margin=1in]{geometry}
+\usepackage{booktabs} 
 
 \title{Integración en la UE: Resultados}
 \author{Alba Nuez Vilà}
 \date{Julio 2024}
 
+\SweaveOpts{fig.path='figures/', fig.width=4, fig.height=3, concordance=TRUE}
+
 \begin{document}
-\SweaveOpts{concordance=TRUE}
 \maketitle
 
 \section{Actitud hacia los demás e inmigración}
@@ -25,16 +28,16 @@ La variable ``actitud hacia los demás'' se obtiene calculando el promedio de la
 \text{actitud hacia los demás} = \frac{\text{confianza} + \text{honestidad} + \text{ayuda}}{3}
 \]
 
-Estas variables están codificadas en una escala Likert, presentan patrones de respuesta similares y abordan cuestiones relacionadas (\textit{ver más detalle en el documento de planificación}). Esta variable varía de 0 a 10, donde 0 indica una actitud muy negativa hacia los demás y 10 una actitud muy positiva. 
+Estas variables están codificadas en una escala Likert, presentan patrones de respuesta similares y abordan cuestiones relacionadas (\textit{ver más detalle en el documento de planificación}). Esta variable varía de 0 a 10, donde 0 indica una actitud muy negativa hacia los demás y 10 una actitud muy positiva.
 
 A nivel europeo, la distribución de esta variable muestra que la mayoría de encuestados presentan una actitud positiva hacia los demás, con una clara tendencia a valores superiores a 5.
 
-<<histogram, echo=FALSE, fig=TRUE, fig.width=5, fig.height=4>>=
+<<histogram, echo=FALSE, fig=TRUE>>=
 library(ggplot2)
 library(dplyr)
 library(readxl)
 
-#Cargamos la base de datos depurada
+# Cargamos la base de datos depurada
 df <- read_excel("../Datos y Dashboard/Depurada_ESS11_subset.xlsx")
 
 # Plot
@@ -54,13 +57,37 @@ ggplot(df, aes(x = factor(actitud_positiva))) +
     axis.line = element_line(color = "grey"),
     axis.text.x = element_text(angle = 90, hjust = 1, color = "black"),
     axis.text.y = element_text(color = "black"),
-    axis.title = element_text(color = "black")
+    axis.title = element_text(color = "black"),
   )
 @
 
+
+<<histogram, echo=FALSE, fig.width=5, fig.height=4, fig.align='center'>>=
+library(ggplot2)
+
+# Create the plot
+ggplot(df, aes(x = factor(actitud_positiva))) +
+  geom_bar(fill = "coral1", color = "white") +
+  labs(title = "'Actitud hacia los demás'", x = "Actitud", y = "Frecuencia") +
+  geom_text(stat = 'count', aes(label = ..count..), vjust = -0.5, size = 3) +
+  annotate("text", x = -Inf, y = Inf, label = "0 = Muy negativa", hjust = -0.1, 
+           vjust = 1.5, size = 4, color = "black") +
+  annotate("text", x = -Inf, y = Inf, label = "10 = Muy positiva", hjust = -0.1, 
+           vjust = 3.5, size = 4, color = "black") +
+  theme(
+    plot.title = element_text(hjust = 0.5, face = "bold"),
+    panel.background = element_blank(),
+    panel.grid.major = element_blank(),
+    panel.grid.minor = element_blank(),
+    axis.line = element_line(color = "grey"),
+    axis.text.x = element_text(angle = 90, hjust = 1, color = "black"),
+    axis.text.y = element_text(color = "black"),
+    axis.title = element_text(color = "black")
+  )
+@
 La actitud hacia los demás parece estar fuertemente influenciada por el país de origen del encuestado. Según el mapa de calor, los encuestados de Eslovaquia (SK) y Hungría (HU) tienden a mostrar una actitud menos favorable hacia los demás, con niveles de confianza, honestidad y ayuda por debajo de 5. En contraste, los encuestados austriacos (AT) muestran una actitud más positiva, con una respuesta predominante de 7 en estas variables.
 
-<<echo=FALSE, fig=TRUE, fig.width=5, fig.height=4>>=
+<<echo=FALSE, fig=TRUE>>=
 library(lattice)
 library(dplyr)
 
@@ -71,14 +98,9 @@ heatmap_data <- df %>%
   summarise(count = n()) %>%
   ungroup()
 
-# Normalize cntry by proportions
-heatmap_data <- heatmap_data %>%
-  group_by(actitud_positiva) %>%
-  mutate(prop_count = count / sum(count)) %>%
-  ungroup()
 
 # Convert to matrix format for levelplot
-heatmap_matrix <- xtabs(prop_count ~ actitud_positiva + cntry, data = heatmap_data)
+heatmap_matrix <- xtabs(count ~ actitud_positiva + cntry, data = heatmap_data)
 
 # Plot the heatmap
 levelplot(heatmap_matrix, 
@@ -94,9 +116,9 @@ levelplot(heatmap_matrix,
           main = "Mapa de calor: Actitud vs País")
 @
 
-En esta misma línea, los encuestados de Eslovaquia (SK) y Hungría (HU) mayoritariamente opinan que la inmigración es mala para la economía de su país, mientras que los encuestados de Alemania (DE) o Australia (AT) tienden a tener una opinión positiva acerca del impacto de inmigración en la economía.
+En esta misma línea, los encuestados de Eslovaquia (SK) y Hungría (HU) mayoritariamente opinan que la inmigración es mala para la economía de su país, mientras que los encuestados de Alemania (DE) o Austria (AT) tienden a tener una opinión positiva acerca del impacto de inmigración en la economía.
 
-<<echo=FALSE, fig=TRUE, fig.width=5, fig.height=4>>=
+<<echo=FALSE, fig=TRUE>>=
 library(lattice)
 library(dplyr)
 
@@ -120,32 +142,62 @@ levelplot(heatmap_matrix,
           main = "Mapa de calor: Opinión economía e inmigración vs país")
 @
 
-Finalmente, a nivel europeo parece existir una correlación entre la actitud hacia los demás y la opinión acerca del impacto de la inmigración en la calidad de vida, hecho que puede observarse en el mapa de calor mostrado en el *dashboard*. 
+Finalmente, a nivel europeo parece existir una correlación entre la actitud hacia los demás y la opinión acerca del impacto de la inmigración en la calidad de vida, hecho que puede observarse en la marcada diagonal en el mapa de calor:
+
+<<echo=FALSE, fig=TRUE>>=
+heatmap_data_all <- df %>%
+    group_by(actitud_positiva, imwbcnt) %>%
+    summarise(count = n()) %>%
+    ungroup()
+  
+heatmap_matrix_all <- xtabs(count ~ actitud_positiva + imwbcnt, data = heatmap_data_all)
+  
+# Mapa de calor para todos los países
+levelplot(heatmap_matrix_all, 
+            xlab = "Actitud", 
+            ylab = "Opinión inmigración y calidad de vida", 
+            col.regions = colorRampPalette(c("white", "coral1")),
+            scales = list(x = list(rot = 90)),
+            panel = function(...) {
+              panel.levelplot(...)
+              panel.text(row(heatmap_matrix_all), col(heatmap_matrix_all), 
+                         labels = heatmap_matrix_all, cex = 0.8)  # Display absolute counts
+            },
+            main = "Actitud vs opinión inmigración y calidad de vida")
+@
+
+
 
 
 \section{Adopción LGTBQ+}
 
-Existen notables diferencias en la opinión sobre la adopción por parte de personas homosexuales entre diferentes países. Por ejemplo, Austria (AT), Países Bajos (NL) y Noruega muestran un fuerte apoyo a este derecho, mientras que Eslovaquia (SK), Lituania (LT), Hungría (HU) y Croacia (HR) están mayoritariamente en contra, como se evidencia en el siguiente mapa de calor (o el gráfico de barras apiladas incluido en el *dashboard*):
+\begin{center}
+\emph{¿Cómo difieren las opiniones sobre la adopción LGTBQ+ entre países?}
+\end{center}
 
-<<echo=FALSE, fig=TRUE, fig.width=5, fig.height=4>>=
-heatmap_data <- df %>%
-  group_by(hmsacld, cntry) %>%
-  summarise(count = n()) %>%
-  ungroup()
+Existen notables diferencias en la opinión sobre la adopción por parte de personas homosexuales entre diferentes países. Por ejemplo, Austria (AT), Países Bajos (NL) y Noruega (NO) muestran un fuerte apoyo a este derecho, mientras que Eslovaquia (SK), Lituania (LT), Hungría (HU) y Croacia (HR) están mayoritariamente en contra, como se evidencia en la siguiente tabla (o el gráfico de barras apiladas incluido en el \emph{dashboard}):
 
-heatmap_matrix <- xtabs(count ~ hmsacld + cntry, data = heatmap_data)
-
-levelplot(heatmap_matrix, 
-          xlab = "Adopción LGTBQ+", 
-          ylab = "País", 
-          col.regions = colorRampPalette(c("white", "coral1")),
-          scales = list(x = list(rot = 90)),
-          panel = function(...) {
-            panel.levelplot(...)
-            panel.text(row(heatmap_matrix), col(heatmap_matrix), 
-                       labels = heatmap_matrix, cex = 0.8)  # Display absolute counts
-          },
-          main = "Mapa de calor: Adopción LGTBQ+ vs país")
-@
-
+\begin{table}[h!]
+\centering
+\caption{Opinión adopción LGTBQ+ por país (1 = muy a favor, 5 = muy en contra)}
+\begin{tabular}{lrrrrrr}
+\toprule
+\textbf{País} & \textbf{1} & \textbf{2} & \textbf{3} & \textbf{4} & \textbf{5} & \textbf{NS/NC} \\
+\midrule
+AT & 621 & \textbf{748} & 436 & 273 & 162 & 114 \\
+CH & 326 & \textbf{434} & 236 & 223 & 129 & 36 \\
+DE & \textbf{935} & 881 & 235 & 215 & 117 & 37 \\
+FI & \textbf{560} & 470 & 216 & 194 & 94 & 29 \\
+GB & \textbf{618} & 562 & 218 & 148 & 81 & 57 \\
+HR & 89 & 267 & 229 & \textbf{492} & 409 & 77 \\
+HU & 161 & 388 & \textbf{540} & 432 & 527 & 70 \\
+IE & \textbf{734} & 586 & 326 & 148 & 145 & 78 \\
+LT & 26 & 136 & 237 & \textbf{490} & 449 & 27 \\
+NL & \textbf{882} & 497 & 145 & 90 & 62 & 19 \\
+NO & \textbf{622} & 395 & 172 & 89 & 52 & 7 \\
+SI & 128 & 349 & 208 & \textbf{289} & 224 & 50 \\
+SK & 36 & 155 & 243 & 329 & \textbf{610} & 69 \\
+\bottomrule
+\end{tabular}
+\end{table}
 \end{document}
